[package]
name = "strompris"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38" , features = ["serde", "clock"]}
env_logger = "0.11"
reqwest = {version = "0.12.5", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.28", features = ["full"]}
url = "2.5.2"
