[package]
name = "strompris"
version = "0.4.1-alpha.1"
edition = "2021"
license = "MIT"
description = "A simple wrapper of the Strømpris-API from https://hvakosterstrommen.no"
repository = "https://github.com/erlingv-chr/strompris/"
readme = "README.md"
keywords = ["strompris", "hvakosterstrommen"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4.38" , features = ["serde", "clock"]}
derive_more = "0.99.18"
reqwest = {version = "0.12.5", features = ["json", "blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.2"

[dev-dependencies]
tokio = {version = "1.28", features = ["full"]}
